{
  "version": 4,
  "terraform_version": "1.3.9",
  "serial": 2699,
  "lineage": "ba06891d-1efc-b4cc-d7a8-f90bebe27cbb",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks-all-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:107972469409:security-group/sg-022c53bc2eea3bb15",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-022c53bc2eea3bb15",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "test-soldesk",
            "name_prefix": "",
            "owner_id": "107972469409",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e0407e4cd7f0ef43"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.iron"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private-eks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:107972469409:security-group/sg-05e060ea6e1c890a5",
            "description": "eks-private",
            "egress": [],
            "id": "sg-05e060ea6e1c890a5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "private-eks",
            "name_prefix": "",
            "owner_id": "107972469409",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e0407e4cd7f0ef43"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.iron"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private-rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:107972469409:security-group/sg-04263e7536d779ac2",
            "description": "rds-private",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04263e7536d779ac2",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-045ff24ce3a8357fa"
                ],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05e060ea6e1c890a5"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "private-rds",
            "name_prefix": "",
            "owner_id": "107972469409",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "private-rds"
            },
            "tags_all": {
              "Name": "private-rds"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e0407e4cd7f0ef43"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eks_cluster.iron-eks",
            "aws_iam_role.eks_cluster",
            "aws_iam_role_policy_attachment.iron-eks-AmazonEKSClusterPolicy",
            "aws_security_group.eks-all-group",
            "aws_security_group.private-eks",
            "aws_subnet.private_eks1",
            "aws_subnet.private_eks2",
            "aws_vpc.iron"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:107972469409:subnet/subnet-013abf5b1a4407d45",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "172.20.101.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-013abf5b1a4407d45",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "107972469409",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_a"
            },
            "tags_all": {
              "Name": "private_a"
            },
            "vpc_id": "vpc-0e0407e4cd7f0ef43"
          },
          "dependencies": [
            "aws_vpc.iron"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:107972469409:subnet/subnet-03635cff947fb06fe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "172.20.102.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03635cff947fb06fe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "107972469409",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_c"
            },
            "tags_all": {
              "Name": "private_c"
            },
            "vpc_id": "vpc-0e0407e4cd7f0ef43"
          },
          "dependencies": [
            "aws_vpc.iron"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_eks1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:107972469409:subnet/subnet-094aa597db6cd32d5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "172.20.103.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-094aa597db6cd32d5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "107972469409",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-eks"
            },
            "tags_all": {
              "Name": "private-eks"
            },
            "vpc_id": "vpc-0e0407e4cd7f0ef43"
          },
          "dependencies": [
            "aws_vpc.iron"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_eks2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:107972469409:subnet/subnet-0a214dddf74ba0a27",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "172.20.104.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a214dddf74ba0a27",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "107972469409",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-eks"
            },
            "tags_all": {
              "Name": "private-eks"
            },
            "vpc_id": "vpc-0e0407e4cd7f0ef43"
          },
          "dependencies": [
            "aws_vpc.iron"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "iron",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:107972469409:vpc/vpc-0e0407e4cd7f0ef43",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.20.0.0/16",
            "default_network_acl_id": "acl-08605adb91381076f",
            "default_route_table_id": "rtb-019935aa85270fcb4",
            "default_security_group_id": "sg-0f5b4b8569c05b073",
            "dhcp_options_id": "dopt-0d20f5df05cef34b5",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e0407e4cd7f0ef43",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-019935aa85270fcb4",
            "owner_id": "107972469409",
            "tags": {
              "Name": "iron"
            },
            "tags_all": {
              "Name": "iron"
            }
          }
        }
      ]
    }
  ]
}